@@ -9,9 +9,10 @@ Cacti CHANGELOG
 -bug#0000906: Every Tenth Host Does Not Show on Tree During Console Edit 
 -bug#0000907: Sorting of Datasources, when interface numbers are used without leading zeros interfaces are incorrectly sorted 
 -bug#0000921: cactid and ping.pl script error
+-bug#0000925: Support for host_* variables in the legend
 -bug#0000927: Classic export does not recognize thumbnail columns properly
 -bug#0000931: new rrdtool chokes on empty comment 
--bug#0000925: Support for host_* variables in the legend
+-bug#0000937: System output in hosts.php poor for Alcatel
 -bug#0000953: SNMP Passphrase displayed in cleartext 
 -bug#0000957: Script Server Output's Beginning/Trailing Data During "Include" Causing a Synchronization Issue
 -bug#0000958: Slope Mode is Not Selectable  
